--- a/teste.html
+++ b/teste.html
@@ -1,4 +1,18 @@
-Três ultimos jogos que joguei
-1-free fire
-2-8 ball
-3-PabG
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Outa pag</title>
+</head>
+
+<body>
+    Três ultimos jogos que joguei
+    1-free fire
+    2-8 ball
+    3-PabG
+</body>
+
+</html>
