--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Minha pag exemplos
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Minha pagina de exemplos</h1>
+
+    <p>Esta foi minha primeira página de teste</p>
+    <p>oEste é meu segundo teste</p>
+</body>
+</html>
