adiciona linha na pagina inicial

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Minha pagina de exemplos</h1>
 
-    <p>Esta foi minha primeira página de teste</p>
-    <p>oEste é meu segundo teste</p>
+    <p> Esta foi minha <a href="teste.html">  primeira página de teste</a>.</p>
+    <p> Este é meu <a href="outra.html"> segundo teste</a></p>
 </body>
 </html>
