adiciono elementos semanticos

--- a/teste.html
+++ b/teste.html
@@ -5,14 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outa pag</title>
+    <title>Jogos jogados</title>
 </head>
 
 <body>
-    Três ultimos jogos que joguei
-    1-free fire
-    2-8 ball
-    3-PabG
+    <h1>Jogos Jogados</h1>
+
+    <p>Três ultimos jogos que joguei:</p>
+
+    <ol>
+        <li>free fire</li>
+        <li>8 ball</li>  
+        <li>PabG</li> 
+    </ol>
+    <p>Filmes e Séries que assisti:</p>
+    <ul>
+
+        <li> <div>Filmes</div> 
+        <ul>
+             <li>Homem de Ferro</li>
+            <li>Super man</li>
+        </ul>
+     </li>
+        <li> <div>Séries</div> 
+         <ul>        
+            <li>You</li>
+            <li>Teoria do Bigbang</li>
+        </ul>
+        </li>
+
+    </ul>
 </body>
 
 </html>
