adiciona estrutura no index

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Pagina inicial</title>
 </head>
 <body>
-    <h1>Minha pagina de exemplos</h1>
-
-    <p> Esta foi minha <a href="teste.html">  primeira página de teste</a>.</p>
-    <p> Este é meu <a href="outra.html"> segundo teste</a></p>
+    <header>
+     <h1>Minha pagina de exemplos 2</h1>
+    </header>
+    <main>
+      <p> Esta foi minha <a href="teste.html">  primeira página de teste</a>.</p>
+      <p> Este é meu <a href="outra.html"> segundo teste</a></p>
+    </main>
+    <footer>
+        &copy;2023 &lt; DCC121
+    </footer>
 </body>
 </html>
