--- a/teste.html
+++ b/teste.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
+   <header>
     <h1>Jogos Jogados</h1>
-
+   </header>
+    
+     <main>
     <p>Três ultimos jogos que joguei:</p>
 
     <ol>
@@ -33,8 +36,9 @@
             <li>Teoria do Bigbang</li>
         </ul>
         </li>
-
+   
     </ul>
+</main>
 </body>
 
 </html>
