Navegação entre paginas

--- a/index.html
+++ b/index.html
@@ -9,13 +9,23 @@
 <body>
     <header>
      <h1>Minha pagina de exemplos 2</h1>
+     <nav>
+        <ul>
+        <li> <a href="">home</a> </li>
+        <li><a href="teste.html"> lista</a></li>
+        <li><a href="outra.html">outra</a></li>
+    </ul>
+    </nav>
     </header>
     <main>
-      <p> Esta foi minha <a href="teste.html">  primeira página de teste</a>.</p>
-      <p> Este é meu <a href="outra.html"> segundo teste</a></p>
+        
+      <p><li> Esta foi minha <a href="teste.html">  primeira página de teste</a>.</p></li>
+      <p> <li> Este é meu <a href="outra.html"> segundo teste</a></p></li>
+
+   
     </main>
     <footer>
-        &copy;2023 &lt; DCC121
+        &copy;2023 &lt;&gt; DCC121
     </footer>
 </body>
 </html>
