--- a/outra.html
+++ b/outra.html
@@ -7,6 +7,18 @@
     <title>Outa pag</title>
 </head>
 <body>
+    <header>
+
+   <h1 style="color: brown;"> Outra Página</h1>
+   <nav>
+    <ul>
+        <li> <a href="index.html">home</a> </li>
+        <li><a href="teste.html"> lista</a></li>
+        <li><a href="">outra</a></li>
+    </ul>
+    </nav>
+
+    </header>
     Olá mundo! E git.
     
 </body>
