--- a/teste.html
+++ b/teste.html
@@ -11,6 +11,13 @@
 <body>
    <header>
     <h1>Jogos Jogados</h1>
+    <nav>
+        <ul>
+            <li> <a href="index.html">home</a> </li>
+            <li><a href=""> lista</a></li>
+            <li><a href="outra.html">outra</a></li>
+        </ul>
+    </nav>
    </header>
     
      <main>
@@ -25,14 +32,14 @@
     <ul>
 
         <li> <div>Filmes</div> 
-        <ul>
+        <ul style="color: blue;">
              <li>Homem de Ferro</li>
             <li>Super man</li>
         </ul>
      </li>
         <li> <div>Séries</div> 
-         <ul>        
-            <li>You</li>
+         <ul style="color: green;">        
+            <li> You</li>
             <li>Teoria do Bigbang</li>
         </ul>
         </li>
