--- a/outra.html
+++ b/outra.html
@@ -9,7 +9,7 @@
 <body>
     <header>
 
-   <h1 style="color: brown;"> Outra Página</h1>
+   <h1 style="color: red"> Outra Página</h1>
    <nav>
     <ul>
         <li> <a href="index.html">home</a> </li>
