adiciona estilo ao cabeçalho e rodapé

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Pagina inicial</title>
 </head>
 <body>
-    <header>
+    <header style= "padding: 2em 1em; color: white; background-color: black;">
      <h1>Minha pagina de exemplos 2</h1>
      <nav>
-        <ul>
-        <li> <a href="">home</a> </li>
-        <li><a href="teste.html"> lista</a></li>
-        <li><a href="outra.html">outra</a></li>
+        <ul>;
+        <li style="display: inline; border: solid 1px; padding:  0.5em;" ><a href="">home</a> </li>
+        <li style="display: inline; border: solid 1px; padding:  0.5em;" ><a href="teste.html"> lista</a></li>
+        <li style="display: inline; border: solid 1px; padding:  0.5em" ><a href="outra.html">outra</a></li>
     </ul>
     </nav>
     </header>
