adicionando estilo para os links

--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina inicial</title>
+    <style>
+        li {
+            display: inline; 
+            border: solid 1px; 
+            padding:  0.5em;
+        }
+        header a{
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <header style= "padding: 2em 1em; color: white; background-color: black;">
      <h1>Minha pagina de exemplos 2</h1>
      <nav>
         <ul>;
-        <li style="display: inline; border: solid 1px; padding:  0.5em;" ><a href="">home</a> </li>
-        <li style="display: inline; border: solid 1px; padding:  0.5em;" ><a href="teste.html"> lista</a></li>
-        <li style="display: inline; border: solid 1px; padding:  0.5em" ><a href="outra.html">outra</a></li>
+        <li><a href="">home</a> </li>
+        <li><a href="teste.html"> lista</a></li>
+        <li><a href="outra.html">outra</a></li>
     </ul>
     </nav>
     </header>
