adiciona estilo via seletor e rodapé

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina inicial</title>
     <style>
+        header, footer{
+            padding: 2em 1em;
+            color: white;
+            background-color: 
+            black;
+        }
         li {
             display: inline; 
             border: solid 1px; 
@@ -17,7 +23,7 @@
     </style>
 </head>
 <body>
-    <header style= "padding: 2em 1em; color: white; background-color: black;">
+    <header>
      <h1>Minha pagina de exemplos 2</h1>
      <nav>
         <ul>;
