adicione estilo por classe

--- a/teste.html
+++ b/teste.html
@@ -7,6 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogos jogados</title>
     <link rel="stylesheet" href="estilopb.css">
+    <style>
+        li.serie{
+            color: green;
+        }
+        li.filme{
+            color: blue;
+        }
+
+        .jogo{
+            color: orange;
+        }
+        p> .jogo{
+            border-bottom: dashed;
+        }
+    </style>
 </head>
 
 <body>
@@ -25,23 +40,23 @@
     <p>Três ultimos jogos que joguei:</p>
 
     <ol>
-        <li>free fire</li>
-        <li>8 ball</li>  
-        <li>PabG</li> 
+        <li class="jogo">free fire</li>
+        <li class="jogo">8 ball</li>  
+        <li class="jogo">PabG</li> 
     </ol>
     <p>Filmes e Séries que assisti:</p>
     <ul>
 
         <li> <div>Filmes</div> 
         <ul style="color: blue;">
-             <li>Homem de Ferro</li>
-            <li>Super man</li>
+            <li class="filme">Homem de Ferro</li>
+            <li class="filme">Super man</li>
         </ul>
      </li>
         <li> <div>Séries</div> 
          <ul style="color: green;">        
-            <li> You</li>
-            <li>Teoria do Bigbang</li>
+            <li class="serie"> You</li>
+            <li class="serie">Teoria do Bigbang</li>
         </ul>
         </li>
    
